Refactored the DroneDashboard. Seperated Logic for the different Panels for cleaner code.